# balatro-mcp

./: .gitignore  AGENTS.md  Cargo.toml  MIGRATION.md  README.md  balatroctl.py
agent/: QUICK_REFERENCE.md  replays.py
balatro_agent/: __init__.py  config.py  controller.py  estimation_feedback.py  ipc.py  policy.py  reliability.py  rendering.py  runtime.py  scoring.py  storage.py  strategy.py
mod/: README.md  codex_agent.lua  lovely.toml
scripts/: run-balatro-mcp.ps1
src/: crash.rs  guide.rs  infra.rs  main.rs  models.rs  protocol.rs  rules.rs  tools.rs
src/backend/: ipc.rs  mod.rs  observation.rs  policy.rs  replay.rs  runtime.rs  scoring.rs  state.rs
tests/: test_reliability.py
tools/balatro-info-db/: README.md  package.json
tools/balatro-info-db/src/: cli.js  database.js  importer.js  lua-parser.js  query.js  text.js
tools/balatro-info-db/test/: cli.test.js
