[package]
name = "balatro-mcp"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "balatro-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4.0", features = ["server", "transport-io"] }
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = "1.1.0"
thiserror = "2.0.17"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
